--- a/anna.html
+++ b/anna.html
@@ -3,10 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> 
+    <meta name="viewport" content="width=>, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet"href="anna.css">
 </head>
 <body>
-    <h1>vai ser uma imagem aqui</h1>
-</body>
-</html>ctrl s
+</header>
+<header class="cabeçalho">
+    <img class="cabeçalho-imagem"src="logo"alt="logo cerb">
+    <ul class="cabeçalho-lista">
+        <li class="cabeçalho-lista-item">Escola</li>
+        <li class="cabeçalho-lista-item">Estudante</li>
+    </ul>
+    </header>
+    <section class="escola">
+    </section>
+    <section class="escola">
+        <div class="escola-div-conteudo">
+        <h2 class="escola-titulo">sobre a escola</h2>
+        <p class="escola-texto-um">Nossa Turma </p>
+   <p class="escola-texto-dois">Profissões rurais</p>
+        </div>
+   <img class="escola-imagem"src="C:\Users\CERB2\Documents\annaa-main\coffee farm-cuate (1).png"alt="colheita café">
+    </section>
+    <section class="estudantes">
+        <h2 class="estudante-titulo">Conheça algumas profissões</h2>
+        <div class="estudante-div">
+        <img class="estudante-imagem"src="C:\Users\CERB2\Documents\annaa-main\coffee farm-cuate (1).png"alt="produtor rural">
+        <h3 class="estudante-nome">Produtor rural</h3>
+        <a href="https://web.whatsapp.com/"><img class="estudante-icone"src="C:\Users\CERB2\Documents\site-turma-criativo-main\whatsapp (1).png"alt="icone watsap"></a>
+        <a href="https://pt-br.facebook.com/"><img class="estudante-icone"src="C:\Users\CERB2\Documents\site-turma-criativo-main\facebook.png"alt="icone facebook"></a>
+        </div>
+    </section>
+    <footer class="rodape">
+        <img class="rodape-imagem"src="C:\Users\CERB2\Documents\natali-main\TV show-amico.png"alt="reporter">
+      </footer>
+  </body>
+  </html>
+  
+
+
+ 
